HealthyCateringWeb/web/resources/css/layout_styles.css
/* 
    Document   : main_styles
    Created on : Feb 28, 2013, 1:10:33 PM
    Author     : Karl
    Description:
        This style sheet is related to placement and sub-styling of elements.
        If you want to add something new to this file, first add a section
        (via comments) as done previously. Keep it clean.

        IMPORTANT: If what you're adding here is global to the entire site you
        should add it to main_styles.css'
*/

/* The sliding login-bar at the top */
#top_bar_span_login_always_show {
    padding: 4px 0;
    text-align: center;
    background-color: brown;
    height: 20px;
    width: 100%;
}

#top_bar_span_login {
    background-color: lightcoral;
    width: 100%;
    height: 200px;
    display: none;
}

#site_opaque {
    position: absolute;
    padding: 0;
    margin: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(255, 255, 255, 0.5);
    display: none;
}

.login_form {
    background-color: red;
    width: 300px;
    margin: 0 auto;
    padding-top: 80px;
}

/* Main chunks of the site*/
header#primary_header {
    background-color: lightblue;
}

header#primary_header h1 {
    font-size: 50px;
    display: inline;
}

nav#primary_nav {
}

article#primary_content {
    background-color: lightblue;
    float: left;
    width: 80%;
}

aside#sidebar {
    float: right;
    background-color: lightblue;
    width: 20%;
}

footer#footer {
    background-color: lightblue;
    float: left;
    width: 100%;
}

/* Navigation */
ul#navul {
    display: block;
    list-style-position: inside;
    list-style-type: none;
}

ul#navul li {
    -webkit-transition: 0.1s ease-in;
    float: left;
    background: lightblue;
}

ul#navul li:hover {
    background-color: blue;
    -webkit-transform: scale(1.05);
}

#navul a:link, a:visited {
    padding: 8px 20px;
    font-weight: bold;
    font-size: 14px;
    text-decoration: none;
    display: block;
}
div#login_button {
    float: right;
}

